--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -3,19 +3,19 @@
 /////////////
 
 //Greens
-$primary-color: #63745f; //Zombie
-$primary-color-dark: darken(#63745f, 10%); //Verdant Hush
+$primary-color: #919D82; 
+$primary-color-dark: darken(#626e60, 10%); //Verdant Hush
 //Complementary Shades
 $secondary-color: #7d6b57; //Warrior
 
 //Font Colours
-$text-color: #0c0d0d; //Black Wash
+$text-color: #020202; //Black Wash
 $secondary-text-color: #e1e3cf; //Wild Wheat
 $grey-text-color: #6b6b6b; //Shadows
 $text-color-alt: #0d0d12; //Ruined Smores
 
 //Background Colours
-$background-color: #8e866b; //Wilderness
+$background-color: #D7CEC7; 
 $ash: #B7B9A8; //Ash
 
 //Background Colour Complementary Shades
