--- a/scss/components/_burger.scss
+++ b/scss/components/_burger.scss
@@ -82,10 +82,45 @@
           position: relative;
           text-decoration: none;
           padding: 10px;
-          letter-spacing: 0.1rem;
-          text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3), 
+
+          .hero__text--h1 {
+              top: 40%;
+              font-size: clamp(2rem, 5vw, 3rem);
+              letter-spacing: 0.05em;
+              text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3), 
                        2px 2px 0 rgba(0, 0, 0, 0.2); 
                        filter: blur(0.1px); 
+              
+              @include respond-to(sm) {
+                  top: 35%;
+                  font-size: clamp(1.5rem, 4vw, 2.5rem);
+              }
+
+              @include respond-to(xs) {
+                  top: 30%;
+                  font-size: clamp(1rem, 3vw, 2rem);
+              }
+            }
+
+          .hero__text--h2,
+          .typewriter {
+              top: 55%;
+              font-size: clamp(3rem, 7vw, 4rem);
+              letter-spacing: 0.03em;
+              text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 
+                            2px 2px 2px rgba(0, 0, 0, 0.4); 
+                            filter: blur(0.1px); 
+              @include respond-to(sm) {
+                  top: 60%;
+                  font-size: clamp(2.5rem, 6vw, 3.5rem);
+              }
+
+              @include respond-to(xs) {
+                  top: 65%;
+                  font-size: clamp(2rem, 5vw, 3rem);
+              }
+           }
+          
 
               // Links Hover Effect 
         
@@ -194,9 +229,10 @@
               }
 
             }  
-        }
-    //Social Links
-    .burger__socials {
+    }
+      
+      //Social Links
+      .burger__socials {
       list-style: none;
       display: flex;
       flex-direction: row;
@@ -263,4 +299,5 @@
     @include respond-to(md) {
         display: none;
     }
+  
  
