--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -11,10 +11,10 @@
 .contact__container--xs {
 
     /*Small Devices Contact Grid*/  
-    height: 100vh;
+    height: 100%;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 30px 30px 30px 0.7fr 60px;
+    grid-template-rows: 30px 30px 30px auto 60px;
     gap: 0px 0px;
     margin: 10px;
     grid-auto-flow: row;
@@ -179,26 +179,24 @@
                         color: darken($background-color, 5%);
                     }
             }
+
         }
     }
 
     /*Back To Top Icon Link*/
     .contact__scroll { 
         grid-area: contact__scroll;
-
-        margin-top: 170px;
-        margin-bottom: 60px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        
         font-family: $base-font-family;
         font-size: 1.1rem;
         font-weight: 500;
         color: $text-color;
         justify-self: center;
         align-self: center;
-
-        i {
-            margin-left: calc(100% - 55px);
-        }
-
 
         /*Icon Bouncing Animation*/
         animation: bounce 3s infinite;
@@ -219,6 +217,10 @@
             display: none;
         }
     }
+       
+
+    
+   
 
     /*Hide Small Devices Contact Grid at 768px*/
     @include respond-to(md){
