--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -3,8 +3,8 @@
 // -------------- //
 
 .footer__licence {
+    position: relative;
     bottom: 0;
-    left: 0;
     width: 100vw;
     height: 20px;
     overflow: hidden;
@@ -12,7 +12,7 @@
     font-family: $base-font-family;
     font-size: 0.8rem;
     color: $text-color;
-    background-color: lighten($primary-color, 10%);
-    box-shadow: 0 -2px 0 lighten($primary-color-dark, 10%); 
+    background-color: $primary-color;
+    box-shadow: 0 -2px 0 darken($primary-color, 10%); 
     z-index: 100;
 }
